--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,28 @@ body {
   align-items: center;
   justify-content: center;
   height: calc(100vh - 1px);
+  margin: 1.25rem;
 }
 
 .container {
   background-color: var(--white);
   padding: 1.25rem;
   border-radius: 0/625rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
+  margin-bottom: 2rem;
+}
+
+.container img {
+  border-radius: 0.625rem;
+  margin-bottom: 1rem;
+}
+
+.container h1 {
+  color: var(--Dark-blue);
+}
+
+.container p {
+  color: var(--Grayish-blue);
 }
 
 .attribution {
