--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
 .container h1 {
   color: var(--Dark-blue);
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .container p {
@@ -53,7 +54,7 @@ body {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 14px;
   text-align: center;
 }
 
@@ -61,5 +62,8 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
-.container {
+@media (min-width: 500px) {
+  .container {
+    width: 400px;
+  }
 }
